# soulseek-research

./: .gitignore  CLAUDE.md  DATA_RETENTION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PERIOD_STATS_IMPLEMENTATION.md  README.md  SECURITY_NOTE.md  TESTING_PERIOD_STATS.md  client.yml  database.yml  deploy-archive-system.sh  deploy-production.sh  infrastructure.tf  monitor-production.sh  pyproject.toml  requirements-dashboard.txt  setup-client.sh  setup-database.sh  terraform.tfvars.example  test-local.sh  test_active_search.py  test_cloud_searches.py  test_received_searches.py  test_search_confirm.py  test_search_reception_simple.py  test_simple_active.py  test_tiger2.py
.github/workflows/: update-dashboard.yml  update-stats.yml
docs/: ARTICLE_MODE.md  GITHUB_PAGES_SETUP.md  _config.yml  article.md.example  query.html
docs/_includes/: nav-styles.html  nav.html
docs/_layouts/: dashboard.html  query.html
docs/assets/sqljs/: sqljs-httpvfs.js
scripts/: analyze_convergence.py  archive.py  deploy-archive-system.sh  deploy.sh  destroy.sh  generate_stats.py  monitor.sh  refresh_period_stats.py  refresh_views.py  test-local.sh
src/soulseek_research/: __init__.py  cli.py  client.py
