[project]
name = "soulseek-research"
version = "0.1.0"
description = "Research package for collecting and analyzing Soulseek network traffic"
authors = [
    {name = "Research Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 🚀 MAJOR REFACTOR: aioslsk is now an external dependency
    "aioslsk>=1.6.1",

    # Database dependencies
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",

    # Settings and utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",

    # Statistics and visualization (for generate_stats.py)
    "mistune>=3.0.0",

    # Development and testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
soulseek-research = "soulseek_research.cli:main"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
monitoring = ["grafana-client>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]