[project]
name = "soulseek-research"
version = "0.1.0"
description = "Research package for collecting and analyzing Soulseek network traffic"
authors = [
    {name = "Research Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioslsk>=1.6.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
soulseek-research = "soulseek_research.cli:main"

[project.optional-dependencies]
dashboard = [
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
    "mistune>=3.0.0",
    "pyyaml>=6.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]
scripts = [
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.4",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
